# src/index.ts
@@ -1,25 +1,37 @@
 import express from 'express';
-import type { Request, Response } from 'express';
+import type { Request, Response, NextFunction } from 'express';
 import estudiantesRouter from './routes/estudiante.route.js';
 import swaggerUi from 'swagger-ui-express';
 import swaggerOutput from '../src/swagger_output.json' with {type: 'json'};
+import { errorHandler } from './middlewares/errorHandler.js';
+import cors from 'cors';
 
 const app = express();
-const PORT: number = 3000;
+const PORT = process.env.PORT ?? 3000;
+
+// Middleware para CORS
+app.use(cors());
 
 // Middleware para validar datos tipo JSON en POST & PUT
 app.use(express.json());
+
+// Middleware para visualizar en consola las interacciones con los endpoints
+app.use((req: Request, res: Response, next: NextFunction) => {
+    const timestamp = new Date().toLocaleString();
+    console.log(`[${timestamp}] ${req.method} ${req.url}`);
+    next();
+});
 
 // Middleware para auto-documentación con librería Swagger
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerOutput));
 
 // Middleware para todos los endpoints de estudiantes
-app.use('/api/estudiantes', estudiantesRouter)
+app.use('/api/students', estudiantesRouter)
 
 // Endpoint para testeo activo del servidor
-app.get('/api/status', (req: Request, res: Response) => {
+app.get('/', (req: Request, res: Response) => {
     /* 
-    #swagger.tags = ['Estado del Servidor']
+    #swagger.tags = ['Initial Test']
     #swagger.summary = 'Verificar el estado de la API'
     #swagger.description = 'Retorna si el servicio se encuentra activo y respondiendo.'
     */
@@ -31,10 +43,13 @@ app.get('/api/status', (req: Request, res: Response) => {
     }
 });
 
+// Last Middleware para capturar errores en rutas
+app.use(errorHandler)
+
 // Inicialización del servidor
+console.clear();
 app.listen(PORT, () => {
     try {
-        console.clear();
         console.log(`Servidor corriendo en... http://localhost:${PORT}`);
     } catch (error) {
         const msgError = error instanceof Error ? error.message : 'Error interno desconocido';
